--- a/app/index.html
+++ b/app/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html>
-<!--  https://egghead.io/lessons/angularjs-angular-material-intro-to-ui-components  -->
+<!--  https://egghead.io/lessons/angularjs-angular-material-intro-to-ui-components
+https://www.youtube.com/watch?v=ynPAkZyH3R8&list=PL6gx4Cwl9DGDQ5DrbIl20Zu9hx1IjeVhO&index=3
+
+https://www.youtube.com/watch?v=IR1XJRDxI1o -- very advanced angular mongo appp
+-->
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
     <link rel="icon" href="img/wolfconFav.svg" type="image/svg+xml" sizes="16x16">
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
-    <link rel="stylesheet" href="bower_components/angular-material/angular-material.layouts.css">
+    <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
 </head>
-<body ng-app="mainApp" layout="column">
+<body ng-app="mainApp" layout="column" ng-cloak>
 
-<md-toolbar class="bgltblue">
+<md-toolbar class="bgltblue" layout="row space-around center" ng-controller="MenuCtrl" ng-cloak>
     <h1>
         WolfCon
     </h1>
+
+            <md-button class="md-primary groupX left" href="#/registration" aria-label="Registration">
+                Registration
+            </md-button>
+
+
+
+
 </md-toolbar>
 <div class="container" layout="row" flex>
-        <md-sidenav class="md-sidenav-left md-whiteframe-14dp" md-component-id="left" md-is-locked-open="true">
+        <md-sidenav class="md-sidenav-left md-whiteframe-14dp" md-component-id="left" md-is-locked-open="false">
             <md-list>
                 <md-list-item>
                     <md-button>
@@ -28,10 +40,7 @@
             </md-list>
         </md-sidenav>
 
-        <md-content layout-padding id="content" flex>Content goes here
-
-
-        </md-content>
+        <md-content layout-padding id="content" flex><div ng-view></div></md-content>
 
 </div>
 
@@ -45,8 +54,9 @@
 <script src="bower_components/svg-injector/dist/svg-assets-cache.js"></script>
 
 <script src="js/app.js"></script>
-
 <script src="js/routes.js"></script>
+<script src="js/menu.js"></script>
+<script src="js/registration.js"></script>
 
 </body>
 </html>
