Added the Partners page, but no functionality as of yet, and the menus need to be fixed.

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,21 @@ https://www.youtube.com/watch?v=IR1XJRDxI1o -- very advanced angular mongo appp
             <md-button class="md-primary groupX left" href="#/registration" aria-label="Registration">
                 Registration
             </md-button>
-
+    <md-button class="md-primary groupX left" href="#/bizarre" aria-label="Registration">
+        Bizarre
+    </md-button>
+    <md-button class="md-primary groupX left" href="#/marketing" aria-label="Registration">
+        Marketing
+    </md-button>
+    <md-button class="md-primary groupX left" href="#/event" aria-label="Registration">
+        Event
+    </md-button>
+    <md-button class="md-primary groupX left" href="#/vendor" aria-label="Registration">
+        Vendor
+    </md-button>
+    <md-button class="md-primary groupX left" href="#/sponsor" aria-label="Registration">
+        Sponsor
+    </md-button>
 
 
 
@@ -57,6 +71,7 @@ https://www.youtube.com/watch?v=IR1XJRDxI1o -- very advanced angular mongo appp
 <script src="js/routes.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/registration.js"></script>
+
 
 </body>
 </html>
